--- a/appspec.yml
+++ b/appspec.yml
@@ -14,7 +14,11 @@ permissions:
     group: ubuntu
 
 hooks:
-
+  ApplicationStop:
+    - location: scripts/app_stop.sh
+      timeout: 300
+      runas: ubuntu
+      
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
