--- a/appspec.yml
+++ b/appspec.yml
@@ -14,10 +14,10 @@ permissions:
     group: ubuntu
 
 hooks:
-  ApplicationStop:
-    - location: scripts/app_stop.sh
-      timeout: 300
-      runas: ubuntu
+  #ApplicationStop:
+   # - location: scripts/app_stop.sh
+    # timeout: 300
+    # runas: ubuntu
       
   BeforeInstall:
     - location: scripts/before_install.sh
