--- a/appspec.yml
+++ b/appspec.yml
@@ -17,19 +17,19 @@ hooks:
   ApplicationStop:
     - location: scripts/app_stop.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
       
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
   
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
 
   ApplicationStart:
     - location: scripts/app_start.sh
       timeout: 300
-      runas: root
+      runas: ubuntu
